# raulf-the-recruiter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/interview/: __init__.py  anthropic_llm.py  cli.py  environment.py  fake_llm.py  fake_player.py  fake_recorder.py  fake_stt.py  fake_tts.py  llm.py  openai_stt.py  openai_tts.py  session_evaluator.py  session_metadata.py  session_runner.py  sounddevice_player.py  sounddevice_recorder.py
tests/: test_anthropic_llm.py  test_cli_e2e.py  test_openai_stt.py  test_openai_tts.py  test_session_runner.py  test_sounddevice_recorder.py
