[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raulf-the-recruiter"
version = "0.1.0"
description = "Text-only interview loop walking skeleton"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "anthropic",
  "openai",
  "sounddevice",
  "soundfile",
]

[project.scripts]
interview = "interview.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/interview"]

